# opticube

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vercel.json
Model/: RubiksCube.h  RubiksCube3dArray.cpp
Model/PatternDatabase/: PatternDatabase.h
Scanner/: CubeScanner.cpp  CubeScanner.h
Server/: SolverServer.cpp  build.sh
Server/lib/: httplib.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  MovePruning.h
bits/: stdc++.h
frontend/: api.js  app.js  index.html  solver-worker.js  solver.mjs  solver.wasm  styles.css
wasm/: SolverWasm.cpp  build.sh
